--- a/public/pages/index.html
+++ b/public/pages/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <link rel="stylesheet" href="/public/style/style.css">
+        <link rel="icon" type="image/x-icon" href="/public/images/flag.png">
     </head>
     <body>
     <h1 id="main">Multiplayer Minesweeper</h1>
