--- a/public/pages/minesweeper.html
+++ b/public/pages/minesweeper.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <link rel="stylesheet" href="/public/style/style.css">
+        <link rel="icon" type="image/x-icon" href="/public/images/flag.png">
     </head>
     <body>
         <div id="timer">0000</div>
@@ -10,8 +11,14 @@
             <span id="flagCount"></span>
         </div>
         <div id="board"></div>
+        <div id="board2"></div>
+
         <div hidden id="halfMessage" class="msg"></div>
         <div hidden id="endMessage" class="msg"></div>
+
+        <span id="toggleText">Hide Opponent</span>
+        <input id="cb-toggle" type="checkbox" class="hide-me" aria-labelledby="cb-label">
+        <label for="cb-toggle" class="toggle"></label>
     <script src="/socket.io/socket.io.js"></script>
     <script src="/public/javascript/minesweeper.js"></script>
     </body>
